feat: add swift delete list generation function

--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
                         <div class="section section--column">
                             <h3 class="section__title">Codes SWIFT enregistrés</h3>
                             <div class="paper section__body">
-                                <div class="paper__frame">
+                                <div class="paper__frame" id="swift-delete-list">
+                                    <!--
                                     <section class="swift">
                                         <div class="swift__info">
                                             <h4 class="swift__name">Lena Silvo</h4>
@@ -201,6 +202,7 @@
                                             <button class="swift__button">Supprimer</button>
                                         </details>
                                     </section>
+                                    -->
                                 </div>
                             </div>
                         </div>
