feat: add swift paste list logic

--- a/index.html
+++ b/index.html
@@ -140,70 +140,7 @@
                         <div class="section section--column">
                             <h3 class="section__title">Codes SWIFT enregistrés</h3>
                             <div class="paper section__body">
-                                <div class="paper__frame" id="swift-delete-list">
-                                    <!--
-                                    <section class="swift">
-                                        <div class="swift__info">
-                                            <h4 class="swift__name">Lena Silvo</h4>
-                                            <p class="swift__code">1234567890</p>
-                                        </div>
-                                        <details class="swift__switch">
-                                            <summary class="swift__icon-button">
-                                                <div class="swift__icon swift__icon--delete"></div>
-                                            </summary>
-                                            <button class="swift__button">Supprimer</button>
-                                        </details>
-                                    </section>
-                                    <section class="swift">
-                                        <div class="swift__info">
-                                            <h4 class="swift__name">Owen Chapman</h4>
-                                            <p class="swift__code">2345678901</p>
-                                        </div>
-                                        <details class="swift__switch">
-                                            <summary class="swift__icon-button">
-                                                <div class="swift__icon swift__icon--delete"></div>
-                                            </summary>
-                                            <button class="swift__button">Supprimer</button>
-                                        </details>
-                                    </section>
-                                    <section class="swift">
-                                        <div class="swift__info">
-                                            <h4 class="swift__name">Garry Green</h4>
-                                            <p class="swift__code">3456789120</p>
-                                        </div>
-                                        <details class="swift__switch">
-                                            <summary class="swift__icon-button">
-                                                <div class="swift__icon swift__icon--delete"></div>
-                                            </summary>
-                                            <button class="swift__button">Supprimer</button>
-                                        </details>
-                                    </section>
-                                    <section class="swift">
-                                        <div class="swift__info">
-                                            <h4 class="swift__name">Arthur Popov</h4>
-                                            <p class="swift__code">4567891230</p>
-                                        </div>
-                                        <details class="swift__switch">
-                                            <summary class="swift__icon-button">
-                                                <div class="swift__icon swift__icon--delete"></div>
-                                            </summary>
-                                            <button class="swift__button">Supprimer</button>
-                                        </details>
-                                    </section>
-                                    <section class="swift">
-                                        <div class="swift__info">
-                                            <h4 class="swift__name">Quentin Cooper</h4>
-                                            <p class="swift__code">5678912340</p>
-                                        </div>
-                                        <details class="swift__switch">
-                                            <summary class="swift__icon-button">
-                                                <div class="swift__icon swift__icon--delete"></div>
-                                            </summary>
-                                            <button class="swift__button">Supprimer</button>
-                                        </details>
-                                    </section>
-                                    -->
-                                </div>
+                                <div class="paper__frame" id="swift-delete-list"></div>
                             </div>
                         </div>
                     </section>
@@ -303,7 +240,8 @@
                         <div class="section section--column">
                             <h3 class="section__title">Codes SWIFT enregistrés</h3>
                             <div class="paper section__body">
-                                <div class="paper__frame">
+                                <div class="paper__frame" id="swift-paste-list">
+                                    <!--
                                     <section class="swift swift--transfer">
                                         <div class="swift__info">
                                             <h4 class="swift__name">Lena Silvo</h4>
@@ -349,6 +287,7 @@
                                             <span class="swift__icon swift__icon--transfer"></span>
                                         </button>
                                     </section>
+                                    -->
                                 </div>
                             </div>
                         </div>
