ref: simplify icons

--- a/index.html
+++ b/index.html
@@ -94,9 +94,7 @@
                                 <div class="paper__frame">
                                     <details class="log">
                                         <summary class="log__header">
-                                            <div class="icon log__icon">
-                                                <img class="icon__image" src="/src/assets/images/police.svg" alt="food icon">
-                                            </div>
+                                            <div class="icon icon--police log__icon"></div>
                                             <div class="log__info">
                                                 <h3 class="log__entity">Los Santos Police Department</h3>
                                                 <p class="log__date">22-04-2022</p>
@@ -110,9 +108,7 @@
                                     </details>
                                     <details class="log">
                                         <summary class="log__header">
-                                            <div class="icon log__icon">
-                                                <img class="icon__image" src="/src/assets/images/person.svg" alt="food icon">
-                                            </div>
+                                            <div class="icon icon--person log__icon"></div>
                                             <div class="log__info">
                                                 <h3 class="log__entity">Owen Chapman</h3>
                                                 <p class="log__date">21-04-2022</p>
@@ -235,60 +231,12 @@
                             <button class="form__button form__button--primary form__button--half" type="submit">Transférer</button>
                         </form>
                     </section>
-                    <!-- Transfer swift codes -->
+                    <!-- Transfer swift list -->
                     <section class="grid__section">
                         <div class="section section--column">
                             <h3 class="section__title">Codes SWIFT enregistrés</h3>
                             <div class="paper section__body">
-                                <div class="paper__frame" id="swift-paste-list">
-                                    <!--
-                                    <section class="swift swift--transfer">
-                                        <div class="swift__info">
-                                            <h4 class="swift__name">Lena Silvo</h4>
-                                            <p class="swift__code swift__code--transfer">1234567890</p>
-                                        </div>
-                                        <button class="swift__icon-button swift__icon-button--transfer">
-                                            <span class="swift__icon swift__icon--transfer"></span>
-                                        </button>
-                                    </section>
-                                    <section class="swift swift--transfer">
-                                        <div class="swift__info">
-                                            <h4 class="swift__name">Owen Chapman</h4>
-                                            <p class="swift__code swift__code--transfer">2345678901</p>
-                                        </div>
-                                        <button class="swift__icon-button swift__icon-button--transfer">
-                                            <span class="swift__icon swift__icon--transfer"></span>
-                                        </button>
-                                    </section>
-                                    <section class="swift swift--transfer">
-                                        <div class="swift__info">
-                                            <h4 class="swift__name">Garry Green</h4>
-                                            <p class="swift__code swift__code--transfer">3456789012</p>
-                                        </div>
-                                        <button class="swift__icon-button swift__icon-button--transfer">
-                                            <span class="swift__icon swift__icon--transfer"></span>
-                                        </button>
-                                    </section>
-                                    <section class="swift swift--transfer">
-                                        <div class="swift__info">
-                                            <h4 class="swift__name">Arthur Popov</h4>
-                                            <p class="swift__code swift__code--transfer">4567890123</p>
-                                        </div>
-                                        <button class="swift__icon-button swift__icon-button--transfer">
-                                            <span class="swift__icon swift__icon--transfer"></span>
-                                        </button>
-                                    </section>
-                                    <section class="swift swift--transfer">
-                                        <div class="swift__info">
-                                            <h4 class="swift__name">Quentin Cooper</h4>
-                                            <p class="swift__code swift__code--transfer">5678901234</p>
-                                        </div>
-                                        <button class="swift__icon-button swift__icon-button--transfer">
-                                            <span class="swift__icon swift__icon--transfer"></span>
-                                        </button>
-                                    </section>
-                                    -->
-                                </div>
+                                <div class="paper__frame" id="swift-paste-list"></div>
                             </div>
                         </div>
                     </section>
@@ -311,9 +259,7 @@
                             <h3 class="section__title">Historique des opérations</h3>
                             <div class="paper section__body">
                                 <div class="paper__frame"></div>
-                                <label class="icon icon--button paper__button" for="tab-selector-5" id="tab-5">
-                                    <img class="icon__image" src="/src/assets/images/palm-tree.svg" alt="go to offshore view icon">
-                                </label>
+                                <label class="icon icon--button icon--palm-tree paper__button" for="tab-selector-5" id="tab-5"></label>
                             </div>
                         </div>
                     </section>
