feat: add dedicated button component

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                     <p class="form__message" id="swift-add-message"></p>
                                 </div>
                                 <div class="form__section form__section--fixed">
-                                    <button class="form__button form__button--primary" type="submit">Ajouter</button>
+                                    <button class="button button--primary" type="submit">Ajouter</button>
                                 </div>
                             </div>
                         </form>
@@ -171,11 +171,11 @@
                                 <p class="form__message" id="deposit-message"></p>
                             </div>
                             <div class="form__row">
-                                <div class="form__section form__section--fluid">
-                                    <button class="form__button form__button--primary" type="submit">Déposer</button>
+                                <div class="form__section form__section--fixed">
+                                    <button class="button button--primary" type="submit">Déposer</button>
                                 </div>
-                                <div class="form__section form__section--fluid">
-                                    <button class="form__button form__button--secondary" type="button">Tout déposer</button>
+                                <div class="form__section form__section--fixed">
+                                    <button class="button button--secondary" type="button">Tout déposer</button>
                                 </div>
                             </div>
                         </form>
@@ -198,7 +198,7 @@
                                 <input class="form__input" type="text" name="withdraw-amount" id="withdraw-input" placeholder="Entrer le montant du retrait" required pattern="[0-9]+">
                                 <p class="form__message" id="withdraw-message"></p>
                             </div>
-                            <button class="form__button form__button--primary form__button--half">Retirer</button>
+                            <button class="button button--primary">Retirer</button>
                         </form>
                     </section>
                 </div>
@@ -228,7 +228,7 @@
                                 <input class="form__input" type="text" name="transfer-reference" placeholder="Entrer la référence du transfert" id="transfer-reference-input" required maxlength="40">
                                 <p class="form__message" id="transfer-reference-message"></p>
                             </div>
-                            <button class="form__button form__button--primary form__button--half" type="submit">Transférer</button>
+                            <button class="button button--primary" type="submit">Transférer</button>
                         </form>
                     </section>
                     <!-- Transfer swift list -->
@@ -280,11 +280,11 @@
                                 <p class="form__message" id="enterprise-deposit-message"></p>
                             </div>
                             <div class="form__row">
-                                <div class="form__section form__section--fluid">
-                                    <button class="form__button form__button--primary">Déposer</button>
+                                <div class="form__section form__section--fixed">
+                                    <button class="button button--primary">Déposer</button>
                                 </div>
-                                <div class="form__section form__section--fluid">
-                                    <button class="form__button form__button--secondary">Tout déposer</button>
+                                <div class="form__section form__section--fixed">
+                                    <button class="button button--secondary">Tout déposer</button>
                                 </div>
                             </div>
                         </form>
@@ -298,7 +298,7 @@
                                 <input class="form__input" type="text" name="enterprise-withdraw-amount" id="enterprise-withdraw-input" placeholder="Entrer le montant du retrait" required pattern="[0-9]+">
                                 <p class="form__message" id="enterprise-withdraw-message"></p>
                             </div>
-                            <button class="form__button form__button--primary form__button--half">Retirer</button>
+                            <button class="button button--primary">Retirer</button>
                         </form>
                     </section>
                 </div>
@@ -340,11 +340,11 @@
                                 <p class="form__message" id="offshore-deposit-message"></p>
                             </div>
                             <div class="form__row">
-                                <div class="form__section form__section--fluid">
-                                    <button class="form__button form__button--primary">Déposer</button>
+                                <div class="form__section form__section--fixed">
+                                    <button class="button button--primary">Déposer</button>
                                 </div>
-                                <div class="form__section form__section--fluid">
-                                    <button class="form__button form__button--secondary">Tout déposer</button>
+                                <div class="form__section form__section--fixed">
+                                    <button class="button button--secondary">Tout déposer</button>
                                 </div>
                             </div>
                         </form>
