--- a/index.html
+++ b/index.html
@@ -125,11 +125,32 @@
                         </div>
                     </section>
                     <!-- Account Swift -->
-                    <section class="grid__section">
+                    <section class="grid__section grid__section--with-border">
                         <div class="section">
                             <h3 class="section__title">Code SWIFT</h3>
                             <p class="section__number">0123456789</p>
                         </div>
+                    </section>
+                    <!-- Account Swift add form -->
+                    <section class="grid__section">
+                        <form class="form" id="swift-add-form" novalidate>
+                            <h2 class="form__title">Ajouter un code SWIFT</h2>
+                            <div class="form__row form__row--items-end">
+                                <div class="form__section form__section--fluid">
+                                    <label class="form__label" for="swift-add-name-input">Nom du code SWIFT</label>
+                                    <input class="form__input" type="text" placeholder="Entrer un nom" name="swift-code" required maxlength="40" id="swift-add-name-input">
+                                    <p class="form__message" id="swift-add-name-message"></p>
+                                </div>
+                                <div class="form__section form__section--fluid">
+                                    <label class="form__label" for="swift-add-code-input">Code SWIFT</label>
+                                    <input class="form__input" type="text" placeholder="Entrer un code SWIFT" name="swift-code" required minlength="10" maxlength="10" pattern="[0-9]{10}" id="swift-add-code-input">
+                                    <p class="form__message" id="swift-add-code-message"></p>
+                                </div>
+                                <div class="form__section form__section--fixed">
+                                    <button class="icon icon--filled icon--button icon--add" type="submit"></button>
+                                </div>
+                            </div>
+                        </form>
                     </section>
                     <!-- Account Swift list -->
                     <section class="grid__section">
@@ -139,21 +160,6 @@
                                 <div class="paper__frame" id="swift-delete-list"></div>
                             </div>
                         </div>
-                    </section>
-                    <!-- Account Swift add form -->
-                    <section class="grid__section">
-                        <form class="form" id="swift-add-form" novalidate>
-                            <div class="form__row form__row--items-end">
-                                <div class="form__section form__section--fluid">
-                                    <label class="form__label" for="swift-add-input">Ajouter un code SWIFT</label>
-                                    <input class="form__input" type="text" placeholder="Entrer un code SWIFT" name="swift-code" required minlength="10" maxlength="10" pattern="[0-9]{10}" id="swift-add-input">
-                                    <p class="form__message" id="swift-add-message"></p>
-                                </div>
-                                <div class="form__section form__section--fixed">
-                                    <button class="button button--primary" type="submit">Ajouter</button>
-                                </div>
-                            </div>
-                        </form>
                     </section>
                 </div>
             </div>
