--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                                     <button class="button button--primary" type="submit">Déposer</button>
                                 </div>
                                 <div class="form__section form__section--fixed">
-                                    <button class="button button--secondary">Tout déposer</button>
+                                    <button class="button button--secondary" type="button">Tout déposer</button>
                                 </div>
                             </div>
                         </form>
